--- a/themes/university/package.json
+++ b/themes/university/package.json
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/aknjoroge/fictional-university-wp-theme#readme",
   "devDependencies": {
     "@wordpress/scripts": "^30.5.1"
+  },
+  "dependencies": {
+    "axios": "^1.7.9"
   }
 }
